--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
-	<title></title>
+	<title>Exercise #1: Current Day & Time</title>
 
 	<!-- Imports Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -16,7 +16,7 @@
 <body>
 	<div class="container">
 		<p>Today is:</p>
-		<p id="date"></p>
+		<p id="day"></p>
 		<p>Current time is:</p>
 		<p id="time"></p>
 	</div>
